--- a/django-integracao-de-modelos/requirements.txt
+++ b/django-integracao-de-modelos/requirements.txt
@@ -1,8 +1,9 @@
-Django==3.2.14
+Django==2.2.6
 django-stubs==1.15.0
 django-stubs-ext==0.7.0
 mypy==1.1.1
 mypy-extensions==1.0.0
+Pillow==9.4.0
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
 python-dotenv==0.21.1
